<resources>
    <string name="app_name">Hospital-demo</string>
    <string name="landing_page_logo">LandingPageLogo</string>


    <string name="get_started">Get Started</string>

    <string name="let_s_begin">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="new_user">New User? Sign up now</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="existing_user">Existing User? Log in</string>
    <string name="background_imh">landing_background</string>
    <string name="logo">Logo</string>
    <string name="registration_id">Registration ID</string>
    <string name="vag12002">vag12002</string>
    <string name="last_date_visited">Last Date Visited</string>
    <string name="_03_july_2020">03, July 2020</string>
    <string name="present_health_condition">Present Health Condition</string>
    <string name="recovering">Recovering</string>
    <string name="view_records">View Records</string>
    <string name="add_new_record">Add new Record</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="_15_july_2020">15,July 2020</string>
    <string name="past_appointments">Past Appointments</string>
    <string name="_12_june_2020">12, June 2020</string>
    <string name="dr_ross_cooper">Dr.Ross Cooper</string>
    <string name="person_logo">Person_logo</string>
    <string name="Submit">Submit</string>
    <string name="age">Age</string>
    <string name="surgeries">Previous Surgeries</string>
    <string name="describe_current_medical_condition">Describe Current Medical Condition</string>
    <string name="medical_details">Medical Details</string>
    <string name="patient_appointments">Patient       Appointments</string>
    <string name="hospital_details">Hospital Details</string>
    <string name="medical_history">Medical History</string>
    <string name="medication_reminder">Medication Reminder</string>

</resources>