<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound_gradient">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:src="@drawable/iconpng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/hospital_details_cardView"
        android:layout_width="136dp"
        android:layout_height="172dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/medical_history_cardView"
        app:layout_constraintEnd_toStartOf="@+id/appointment_cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_hospital_details" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/hospital_details"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/appointment_cardView"
        android:layout_width="136dp"
        android:layout_height="172dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/medication_reminder_cardView"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toRightOf="@id/hospital_details_cardView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_appointments" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/patient_appointments"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/medical_history_cardView"
        android:layout_width="136dp"
        android:layout_height="172dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/medication_reminder_cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hospital_details_cardView"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_medical_history" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/medical_history"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/medication_reminder_cardView"
        android:layout_width="136dp"
        android:layout_height="172dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/medical_history_cardView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointment_cardView"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_medication_reminder" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/medication_reminder"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
